--- a/app/includes/content_kids.html
+++ b/app/includes/content_kids.html
@@ -6,7 +6,8 @@
                 <div class="text">
                     <h1>Yeelight LED Ceiling Light (для детей)</h1>
                     <h2>Счастливое детство для мальчиков и девочек</h2>
-                    <p>Симпатичный дизайн из мультфильма | Мягкий свет без мерцания | Уютный лунный свет | Диоды Rа 95</p>
+                    <p>Симпатичный дизайн из мультфильма | Мягкий свет без мерцания | Уютный лунный свет | Диоды Rа 95
+                    </p>
                 </div>
             </div>
         </section>
@@ -15,7 +16,9 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 align-center">
                 <div class="text">
                     <h2>Идеальный подарок для детей</h2>
-                    <p>Объедините милую мультяшную конструкцию с высококачественным источником света. Обеспечение подходящее освещение для учебы, игр и для сна. Хороший потолочный светильник обеспечивает не только освещение, но и заботливую компанию для детей.</p>
+                    <p>Объедините милую мультяшную конструкцию с высококачественным источником света. Обеспечение
+                        подходящее освещение для учебы, игр и для сна. Хороший потолочный светильник обеспечивает не
+                        только освещение, но и заботливую компанию для детей.</p>
                 </div>
                 <ul class="function">
                     <li>
@@ -56,7 +59,8 @@
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <div class="text">
                     <h2>Цыпленок Бидди</h2>
-                    <p>Я цыпленок Бидди. Я общительный и милый. Мне нравится есть сладости и играть со своими друзьями. Мой любимый цвет - желтый.</p>
+                    <p>Я цыпленок Бидди. Я общительный и милый. Мне нравится есть сладости и играть со своими друзьями.
+                        Мой любимый цвет - желтый.</p>
                 </div>
             </div>
         </section>
@@ -70,7 +74,8 @@
             <div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6">
                 <div class="text">
                     <h2>Жираф Талли</h2>
-                    <p>Я Жираф Талли. Я нежен и вежлив. Я очень высокий и люблю есть зеленые овощи. Мне нравится заниматься спортом и чтением. Помните, что защита ваших глаз очень важна.</p>
+                    <p>Я Жираф Талли. Я нежен и вежлив. Я очень высокий и люблю есть зеленые овощи. Мне нравится
+                        заниматься спортом и чтением. Помните, что защита ваших глаз очень важна.</p>
                 </div>
             </div>
         </section>
@@ -84,7 +89,8 @@
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <div class="text">
                     <h2>Дино Шон</h2>
-                    <p>Я Дино Шон. Я смелый и любопытный. Стань моим другом и ты никогда не будешь бояться темноты. Наш мир потрясающий, пойдем и исследуем его вместе.</p>
+                    <p>Я Дино Шон. Я смелый и любопытный. Стань моим другом и ты никогда не будешь бояться темноты. Наш
+                        мир потрясающий, пойдем и исследуем его вместе.</p>
                 </div>
             </div>
         </section>
@@ -93,7 +99,9 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="text align-center">
                     <h2>Мягкий свет без мерцания</h2>
-                    <p>Увеличивая яркость, свет проходит по распределительной пластине и становится более мягким. Технология без мерцания сочетается со здоровым источником света и помогает защитить глаза детей.</p>
+                    <p>Увеличивая яркость, свет проходит по распределительной пластине и становится более мягким.
+                        Технология без мерцания сочетается со здоровым источником света и помогает защитить глаза детей.
+                    </p>
                 </div>
             </div>
         </section>
@@ -102,7 +110,8 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-lg-offset-6">
                 <div class="text">
                     <h2>Эффект естественного освещения</h2>
-                    <p>Оснащен 240 светодиодами, обеспечивающими естественный световой эффект. Низкий индекс цветопередачи.</p>
+                    <p>Оснащен 240 светодиодами, обеспечивающими естественный световой эффект. Низкий индекс
+                        цветопередачи.</p>
                 </div>
             </div>
         </section>
@@ -111,7 +120,8 @@
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
                 <div class="text align-center">
                     <h2>Уютный лунный свет</h2>
-                    <p>Когда включен этот режим, создается удивительная атмосфера лунного сета. С яркостью до 0,1 люмен, режим убирает блики и смягчает зрительное напряжение.</p>
+                    <p>Когда включен этот режим, создается удивительная атмосфера лунного сета. С яркостью до 0,1 люмен,
+                        режим убирает блики и смягчает зрительное напряжение.</p>
                 </div>
             </div>
         </section>
@@ -133,7 +143,8 @@
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 align-center">
                 <div class="text">
                     <h2>Сценарии освещения в ваших руках</h2>
-                    <p>С помощью приложения вы можете использовать смартфон для контроля света в детской комнате одним касанием вашего пальца. Доступно
+                    <p>С помощью приложения вы можете использовать смартфон для контроля света в детской комнате одним
+                        касанием вашего пальца. Доступно
                         множество встроенных
                         сюжетных режимов: ночной, красочный, кино, режим чтения и другие. В приложении легко настроить
                         режим
@@ -148,7 +159,7 @@
         <section class="row luna_content_13">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10 col-lg-offset-1 align-center">
                 <div class="text">
-                    <h2>Удобный bluetooth пульт</h2>
+                    <h2>Удобный bluetooth (опционально)</h2>
                     <p>Двухчиповая трехполосная система затемнения предлагает диапазон цветовой температуры от 2700K до
                         6500K,
                         а диапазон яркости от 0.1lm до 1800lm. Регулировка яркости и цветовой температуры
