--- a/app/includes/content_luna.html
+++ b/app/includes/content_luna.html
@@ -37,8 +37,10 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 align-center">
                 <div class="text">
                     <h2>Больше чем освещение — приятное и умное освещение</h2>
-                    <p>Вечером светодиодная лампа YEELIGHT будет сопровождать вас во время чтения книги. Это поможет вам расслабиться
-                        перед сном, а также создать более спокойную атмосферу. Мы улучшили его, что позволило использовать
+                    <p>Вечером светодиодная лампа YEELIGHT будет сопровождать вас во время чтения книги. Это поможет вам
+                        расслабиться
+                        перед сном, а также создать более спокойную атмосферу. Мы улучшили его, что позволило
+                        использовать
                         функции регулировки яркости и дистанционного управления.</p>
                 </div>
                 <ul class="function">
@@ -74,7 +76,8 @@
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                 <div class="text">
                     <h2>Эффект музейного освещения</h2>
-                    <p>Светодиодный потолочный светильник оснащен 240 светодиодами OSRAM с индексом цветопередачи до 95Ra, что
+                    <p>Светодиодный потолочный светильник оснащен 240 светодиодами OSRAM с индексом цветопередачи до
+                        95Ra, что
                         обеспечивает эффект освещения музея.</p>
                 </div>
             </div>
@@ -86,8 +89,10 @@
             <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 align-center">
                 <div class="text">
                     <h2>Уютный лунный свет</h2>
-                    <p>Режим Moonlight придает лампе внешний вид завораживающей луны. Благодаря регулировке яркости до 0,1 люмена,
-                        светильник Yeelight смягчает блики и снимает зрительное напряжение, позволяя вам комфортно засыпать
+                    <p>Режим Moonlight придает лампе внешний вид завораживающей луны. Благодаря регулировке яркости до
+                        0,1 люмена,
+                        светильник Yeelight смягчает блики и снимает зрительное напряжение, позволяя вам комфортно
+                        засыпать
                         и просыпаться.</p>
                 </div>
             </div>
@@ -96,11 +101,14 @@
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 align-center">
                 <div class="text">
                     <h2>Простая пятиминутная установка</h2>
-                    <p>Со специально разработанным модулем быстрой установки, снимать лампу для чистки стало так просто. Сдвиньте
-                        защелки и лампа у вас в руках, мягко подтолкните и светильник снова на месте. Больше не нужно беспокоиться
+                    <p>Со специально разработанным модулем быстрой установки, снимать лампу для чистки стало так просто.
+                        Сдвиньте
+                        защелки и лампа у вас в руках, мягко подтолкните и светильник снова на месте. Больше не нужно
+                        беспокоиться
                         об установке. С нашим фиксатором это стало так просто, легко и удобно.</p>
                 </div>
-                <video id="fast-install" src="../img/fast-install.mp4" poster="../img/luna_video_prew.jpg" data-condition="0">
+                <video id="fast-install" src="../img/fast-install.mp4" poster="../img/luna_video_prew.jpg"
+                    data-condition="0">
                     <img src="../img/luna_6.jpg" alt="">
                 </video>
             </div>
@@ -109,7 +117,8 @@
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-6">
                 <div class="text">
                     <h2>Синхронизация с браслетом Mi Band</h2>
-                    <p>Используя приложения MI APP или YEELIGHT APP, свяжите ваш Mi Band со светильником. Теперь нет необходимости
+                    <p>Используя приложения MI APP или YEELIGHT APP, свяжите ваш Mi Band со светильником. Теперь нет
+                        необходимости
                         прерывать сон, как только вы заснете, ваш свет автоматически выключится.</p>
                 </div>
             </div>
@@ -118,9 +127,12 @@
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 align-center">
                 <div class="text">
                     <h2>Сценарии освещения в ваших руках</h2>
-                    <p>С помощью приложения вы можете использовать смартфон для смены режима освещения. Доступно множество встроенных
-                        сюжетных режимов: ночной, красочный, кино, режим чтения и другие. В приложении легко настроить режим
-                        помощи засыпания и пробуждения. Доступны также настраиваемые интеллектуальные сцены. Хороший свет
+                    <p>С помощью приложения вы можете использовать смартфон для смены режима освещения. Доступно
+                        множество встроенных
+                        сюжетных режимов: ночной, красочный, кино, режим чтения и другие. В приложении легко настроить
+                        режим
+                        помощи засыпания и пробуждения. Доступны также настраиваемые интеллектуальные сцены. Хороший
+                        свет
                         — умный свет.</p>
                 </div>
                 <img src="../img/luna_app.png" alt="">
@@ -130,11 +142,14 @@
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 align-center">
                 <div class="text">
                     <h2>Ресурс работы более 25 000 часов</h2>
-                    <p>Светильник выполнен из качественных пластмассовых материалов, меди и алюминия, что гарантирует общую
-                        безопасность устройства. Yeelight состоит из около 450 компонентов, которые прошли 96 процессов от
+                    <p>Светильник выполнен из качественных пластмассовых материалов, меди и алюминия, что гарантирует
+                        общую
+                        безопасность устройства. Yeelight состоит из около 450 компонентов, которые прошли 96 процессов
+                        от
                         выбора материала до производства, прежде чем стать одним светильником.</p>
                 </div>
-                <video id="luna-parts" src="../img/luna_parts.mp4" poster="../img/luna_parts_prew.jpg" data-condition="0">
+                <video id="luna-parts" src="../img/luna_parts.mp4" poster="../img/luna_parts_prew.jpg"
+                    data-condition="0">
                     <img src="../img/luna_parts_prew.jpg" alt="">
                 </video>
             </div>
@@ -143,8 +158,10 @@
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-6">
                 <div class="text">
                     <h2>Защита от пыли стандарта IP60</h2>
-                    <p>Попрощайтесь с пылью и летающими насекомыми. Благодаря конструкции пылезащитного уплотнения мы решили
-                        проблему попадания летающих насекомых и накопления пыли в абажуре. Мы сделали все, чтобы вы больше
+                    <p>Попрощайтесь с пылью и летающими насекомыми. Благодаря конструкции пылезащитного уплотнения мы
+                        решили
+                        проблему попадания летающих насекомых и накопления пыли в абажуре. Мы сделали все, чтобы вы
+                        больше
                         не думали о таких мелочах.</p>
                 </div>
             </div>
@@ -153,8 +170,10 @@
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 align-center">
                 <div class="text">
                     <h2>Эффективное рассеивание тепла</h2>
-                    <p>Правильный отвод тепла от светильника это залог его долговечной работы. Аллюминивая пластина и система
-                        продуманных отверстий эффективно оводят и рассеивают тепло выделяемое при работе, обеспечивая эффективное
+                    <p>Правильный отвод тепла от светильника это залог его долговечной работы. Аллюминивая пластина и
+                        система
+                        продуманных отверстий эффективно оводят и рассеивают тепло выделяемое при работе, обеспечивая
+                        эффективное
                         свечение и увеличивая срок службы светодиодов</p>
                 </div>
                 <img src="../img/heat_dissipation.png" alt="">
@@ -163,8 +182,9 @@
         <section class="row luna_content_13">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10 col-lg-offset-1 align-center">
                 <div class="text">
-                    <h2>Удобный bluetooth пульт</h2>
-                    <p>Двухчиповая трехполосная система затемнения предлагает диапазон цветовой температуры от 2700K до 6500K,
+                    <h2>Удобный bluetooth пульт (опционально)</h2>
+                    <p>Двухчиповая трехполосная система затемнения предлагает диапазон цветовой температуры от 2700K до
+                        6500K,
                         а диапазон яркости от 0.1lm до 1800lm. Регулировка яркости и цветовой температуры осуществляется
                         простым прикосновением к пульту дистанционного управления.</p>
                 </div>
