--- a/app/includes/content_nox-plus.html
+++ b/app/includes/content_nox-plus.html
@@ -122,7 +122,8 @@
                 <div class="text">
                     <h2>Несколько интеллектуальных элементов управления</h2>
                     <p>Crystal Plus поддерживает несколько вариантов интеллектуального управления. Помимо традиционного
-                        настенного переключателя и пульта Bluetooth, с мобильными приложениями Yeelight или Mi Home вы
+                        настенного переключателя и пульта Bluetooth (опционально), с мобильными приложениями Yeelight
+                        или Mi Home вы
                         можете легко настроить освещение в своей комнате. Синхронизируя ваш свет с помощью Google
                         Assistant или Amazon Alexa, вы можете реализовать голосовое управление яркостью и цветовой
                         температурой.</p>
@@ -137,7 +138,7 @@
                         </li>
                         <li>
                             <span class="icon remotecontrol"></span>
-                            <p>Пульт</p>
+                            <p>Пульт (опция)</p>
                         </li>
                     </ul>
                 </div>
@@ -243,7 +244,7 @@
                         </tr>
                         <tr>
                             <td>Управление</td>
-                            <td>Голосовое, пульт, приложение</td>
+                            <td>Голосовое, пульт (опция), приложение</td>
                         </tr>
                     </tbody>
                 </table>
