--- a/app/includes/content_nox-round.html
+++ b/app/includes/content_nox-round.html
@@ -25,7 +25,8 @@
                         видить мир таким какой он есть на самом деле.</p>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6" style="padding: 0; font-size: 0;">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6"
+                style="padding: 0; font-size: 0;">
                 <img src="../img/nox-round_02.jpg" alt=""></div>
         </section>
 
@@ -40,7 +41,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
-                src="../img/nox-round_03.jpg" alt=""></div>
+                    src="../img/nox-round_03.jpg" alt=""></div>
         </section>
 
         <section class="row nox_content_4">
@@ -78,7 +79,8 @@
                 <div class="text">
                     <h2>Несколько элементов управления</h2>
                     <p>Crystal Round поддерживает несколько вариантов управления. Помимо традиционного
-                        настенного переключателя, в вашем распоряжении пульт Bluetooth и мобильное приложени Yeelight
+                        настенного переключателя, в вашем распоряжении пульт Bluetooth (оционально) и мобильное
+                        приложени Yeelight
                         или Mi Home. Управлять светом стало легко. Синхронизируя ваш свет с помощью Google Assistant или
                         Amazon Alexa, вы можете реализовать голосовое управление яркостью и цветовой температурой.</p>
                     <ul class="function">
@@ -92,7 +94,7 @@
                         </li>
                         <li>
                             <span class="icon remotecontrol"></span>
-                            <p>Пульт</p>
+                            <p>Пульт (опция)</p>
                         </li>
                     </ul>
                 </div>
@@ -110,8 +112,8 @@
                         хорошему теплоотводу светильник не деформируется в процессе использования.</p>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6" style="padding: 0; font-size: 0;"><img
-                src="../img/nox-round_05.jpg" alt=""></div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6"
+                style="padding: 0; font-size: 0;"><img src="../img/nox-round_05.jpg" alt=""></div>
         </section>
 
         <section class="row nox-round_content_7">
@@ -180,7 +182,7 @@
                         </tr>
                         <tr>
                             <td>Управление</td>
-                            <td>Голосовое, пульт, приложение</td>
+                            <td>Голосовое, пульт (опция), приложение</td>
                         </tr>
                     </tbody>
                 </table>
