--- a/app/includes/content_pendant.html
+++ b/app/includes/content_pendant.html
@@ -6,7 +6,7 @@
                 <div class="text">
                     <h1>Yeelight Crystal Pendant Lamp</h1>
                     <h2>Интелектуальное освещение с&nbsp;натуральным светом</h2>
-                    <p>Регулировка цветовой температуры и&nbsp;яркости| Голосовое управление | Атмосферный свет |
+                    <p>Регулировка цветовой температуры и&nbsp;яркости | Голосовое управление | Атмосферный свет |
                         Реалистичные цвета</p>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                         </tr>
                         <tr>
                             <td>Управление</td>
-                            <td>смартфон, пульт, голос</td>
+                            <td>смартфон, пульт (опция), голос</td>
                         </tr>
                         <tr>
                             <td>Wi-Fi</td>
