--- a/app/includes/content_embedded.html
+++ b/app/includes/content_embedded.html
@@ -13,8 +13,7 @@
         </section>
 
         <section class="row downlight_content_2">
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6"
-                style="padding: 0">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="padding: 0">
                 <div class="text">
                     <h2>Превосходные материалы и отличное качество изготовления</h2>
                     <p>Корус светильника выполнен из тонкого метала с высокими антикорозийными свойствами. За счет этого
@@ -23,8 +22,8 @@
                         напряжения, обеспечивая абсолютную надежность и долговечность.</p>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6"
-                style="padding: 0; font-size: 0;"><img src="../img/downlight_02.jpg" alt=""></div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
+                    src="../img/downlight_02.jpg" alt=""></div>
         </section>
 
         <section class="row downlight_content_3">
@@ -36,8 +35,8 @@
                         светильника.</p>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6" style="padding: 0; font-size: 0;"><img
-                src="../img/downlight_03.jpg" alt=""></div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6"
+                style="padding: 0; font-size: 0;"><img src="../img/downlight_03.jpg" alt=""></div>
         </section>
 
         <section class="row downlight_content_4">
@@ -51,16 +50,15 @@
         </section>
 
         <section class="row downlight_content_5">
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6"
-                style="padding: 0">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0">
                 <div class="text">
                     <h2>Смотрите на мир в натуральных цветах</h2>
                     <p>Благодаря уменьшенному индексу искажения цветопередачи, светильник дает натуральное освещение без
                         примесей, показывая настоящие цвета объектов.</p>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6"
-                style="padding: 0; font-size: 0;"><img src="../img/downlight_06.jpg" alt=""></div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
+                    src="../img/downlight_06.jpg" alt=""></div>
         </section>
 
         <section class="row downlight_content_6">
