--- a/app/includes/content_nox.html
+++ b/app/includes/content_nox.html
@@ -13,8 +13,8 @@
         </section>
 
         <section class="row nox_content_2">
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img src="../img/nox_02.jpg"
-                    alt=""></div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
+                    src="../img/nox_02.jpg" alt=""></div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0">
                 <div class="text">
                     <h2>Лучшее освещение — лучшая жизнь</h2>
@@ -110,8 +110,8 @@
         </section>
 
         <section class="row nox_content_12">
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img src="../img/nox_08.jpg"
-                    alt=""></div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
+                    src="../img/nox_08.jpg" alt=""></div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0">
                 <div class="text">
                     <h2>Универсальный стиль</h2>
@@ -126,7 +126,8 @@
                 <div class="text">
                     <h2>Несколько интеллектуальных элементов управления</h2>
                     <p>Crystal Pro поддерживает несколько вариантов интеллектуального управления. Помимо традиционного
-                        настенного переключателя и пульта Bluetooth, с мобильными приложениями Yeelight или Mi Home вы
+                        настенного переключателя и пульта Bluetooth (оционально), с мобильными приложениями Yeelight или
+                        Mi Home вы
                         можете легко настроить освещение в своей комнате. Синхронизируя ваш свет с помощью Google
                         Assistant или Amazon Alexa, вы можете реализовать голосовое управление яркостью и цветовой
                         температурой.</p>
@@ -141,19 +142,19 @@
                         </li>
                         <li>
                             <span class="icon remotecontrol"></span>
-                            <p>Пульт</p>
+                            <p>Пульт (опция)</p>
                         </li>
                     </ul>
                 </div>
 
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img src="../img/nox_09.jpg"
-                    alt=""></div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
+                    src="../img/nox_09.jpg" alt=""></div>
         </section>
 
         <section class="row nox_content_9">
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img src="../img/nox_10.png"
-                    alt=""></div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
+                    src="../img/nox_10.png" alt=""></div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0">
                 <div class="text">
                     <h2>Сделано с качеством</h2>
@@ -174,8 +175,8 @@
                     </p>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img src="../img/nox_11.png"
-                    alt=""></div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
+                    src="../img/nox_11.png" alt=""></div>
         </section>
 
         <section class="row nox_content_11">
