--- a/app/includes/content_yilai-lotus.html
+++ b/app/includes/content_yilai-lotus.html
@@ -25,7 +25,8 @@
                         видить мир таким какой он есть на самом деле.</p>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6" style="padding: 0; font-size: 0;">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6"
+                style="padding: 0; font-size: 0;">
                 <img src="../img/lotus_05.jpg" alt=""></div>
         </section>
 
@@ -33,9 +34,13 @@
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="padding: 0">
                 <div class="text">
                     <h2>Качественные материалы</h2>
-                    <p>Благодаря качественному PMMA пластику используемому в рассеивающей пластине и абажуре, свет распространяется равномерно, и светильник абсолютно безопасен для использования в любых помещениях — его можно вешать в спальнях, учебных комнатах, столовых, гостиницах.</p>
+                    <p>Благодаря качественному PMMA пластику используемому в рассеивающей пластине и абажуре, свет
+                        распространяется равномерно, и светильник абсолютно безопасен для использования в любых
+                        помещениях — его можно вешать в спальнях, учебных комнатах, столовых, гостиницах.</p>
 
-                    <p>Лампы Yilai Lotus доступны в двух вариантах формы — круглая и прямоугольная. Это позволяет вписать их практически в любой интерьер. Выберети подходящуюю исходя из требуемой площади освещения и дизайна помещения.</p>
+                    <p>Лампы Yilai Lotus доступны в двух вариантах формы — круглая и прямоугольная. Это позволяет
+                        вписать их практически в любой интерьер. Выберети подходящуюю исходя из требуемой площади
+                        освещения и дизайна помещения.</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
@@ -46,8 +51,10 @@
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0">
                 <div class="text">
                     <h2>Несколько элементов управления</h2>
-                    <p>Yeelight Yilai Lotus Ceiling Light поддерживает несколько вариантов управления. Помимо традиционного
-                        настенного переключателя, в вашем распоряжении пульт Bluetooth и мобильное приложени Yeelight
+                    <p>Yeelight Yilai Lotus Ceiling Light поддерживает несколько вариантов управления. Помимо
+                        традиционного
+                        настенного переключателя, в вашем распоряжении пульт Bluetooth (опционально) и мобильное
+                        приложени Yeelight
                         или Mi Home. Управлять светом стало легко. Синхронизируя ваш свет с помощью Google Assistant или
                         Amazon Alexa, вы можете реализовать голосовое управление яркостью и цветовой температурой.</p>
                     <ul class="function">
@@ -61,7 +68,7 @@
                         </li>
                         <li>
                             <span class="icon remotecontrol"></span>
-                            <p>Пульт</p>
+                            <p>Пульт (опция)</p>
                         </li>
                     </ul>
                 </div>
@@ -74,7 +81,9 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-md-offset-1 col-lg-10 col-lg-offset-1 align-center">
                 <div class="text">
                     <h2>Широкий диапазон настройки яркости и&nbsp;температуры</h2>
-                    <p>Чтобы подобрать оптимальное освещение для работы или отдыха, температуру света потолочного светильника Yeelight Lotus можно настраивать по своему желанию. Так же просто можно настроить и яркость до комфортного уровня.</p>
+                    <p>Чтобы подобрать оптимальное освещение для работы или отдыха, температуру света потолочного
+                        светильника Yeelight Lotus можно настраивать по своему желанию. Так же просто можно настроить и
+                        яркость до комфортного уровня.</p>
                 </div>
             </div>
         </section>
@@ -93,7 +102,7 @@
             </div>
         </section>
 
-        
+
 
         <section class="row nox-round_content_11">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -147,7 +156,7 @@
                         </tr>
                         <tr>
                             <td>Управление</td>
-                            <td>Голосовое, пульт, приложение</td>
+                            <td>Голосовое, пульт (опция), приложение</td>
                         </tr>
                     </tbody>
                 </table>
