--- a/app/includes/content_yilai-snow.html
+++ b/app/includes/content_yilai-snow.html
@@ -18,11 +18,16 @@
             <div class="col-xs-12 col-sm-12 col-md-6 col-md-push-6 col-lg-6 col-lg-push-6" style="padding: 0">
                 <div class="text">
                     <h2>Лампа для&nbsp;любой комнаты</h2>
-                    <p>Yilai Snow Ceiling Lamp 480 станет скромным, но ярким украшением любой комнаты площадью до 20 м², будь то гостиная или спальня — светильник прекрасно впишется в любую обстановку и озарит комнату ярким светом.</p>
-                    <p>Мягкая круглая форма напоминает о полной луне и помогает настроиться на спокойный лад перед сном. Светодиоды самого высокого качества обеспечивают яркий и равномерный свет, а большой рассеиватель смягчает и делает его комфортным для глаз.</p>
+                    <p>Yilai Snow Ceiling Lamp 480 станет скромным, но ярким украшением любой комнаты площадью до 20 м²,
+                        будь то гостиная или спальня — светильник прекрасно впишется в любую обстановку и озарит комнату
+                        ярким светом.</p>
+                    <p>Мягкая круглая форма напоминает о полной луне и помогает настроиться на спокойный лад перед сном.
+                        Светодиоды самого высокого качества обеспечивают яркий и равномерный свет, а большой
+                        рассеиватель смягчает и делает его комфортным для глаз.</p>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6" style="padding: 0; font-size: 0;">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6"
+                style="padding: 0; font-size: 0;">
                 <img src="../img/snow_02.jpg" alt=""></div>
         </section>
 
@@ -30,7 +35,9 @@
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <div class="text">
                     <h2>Прочный рассеиватель</h2>
-                    <p>Рассеиватель светильника выполнен из молочно-белого акрила в простой незамысловатой форме. Благодаря высокой светопроницаемости и уникальным свойствам он пропускает только мягкий и равномерный свет.</p>
+                    <p>Рассеиватель светильника выполнен из молочно-белого акрила в простой незамысловатой форме.
+                        Благодаря высокой светопроницаемости и уникальным свойствам он пропускает только мягкий и
+                        равномерный свет.</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="font-size: 0; padding: 0;"><img
@@ -41,7 +48,9 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-md-offset-1 col-lg-10 col-lg-offset-1 align-center">
                 <div class="text">
                     <h2>Широкий диапазон настройки яркости и&nbsp;температуры</h2>
-                    <p>Чтобы подобрать оптимальное освещение для работы или отдыха, температуру света потолочного светильника Yeelight Snow можно настраивать по своему желанию. Так же просто можно настроить и яркость до комфортного уровня.</p>
+                    <p>Чтобы подобрать оптимальное освещение для работы или отдыха, температуру света потолочного
+                        светильника Yeelight Snow можно настраивать по своему желанию. Так же просто можно настроить и
+                        яркость до комфортного уровня.</p>
                 </div>
             </div>
         </section>
@@ -50,8 +59,10 @@
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0">
                 <div class="text">
                     <h2>Несколько элементов управления</h2>
-                    <p>Yeelight Yilai Snow Ceiling Light поддерживает несколько вариантов управления. Помимо традиционного
-                        настенного переключателя, в вашем распоряжении пульт Bluetooth и мобильное приложени Yeelight
+                    <p>Yeelight Yilai Snow Ceiling Light поддерживает несколько вариантов управления. Помимо
+                        традиционного
+                        настенного переключателя, в вашем распоряжении пульт Bluetooth (опционально) и мобильное
+                        приложени Yeelight
                         или Mi Home. Управлять светом стало легко. Синхронизируя ваш свет с помощью Google Assistant или
                         Amazon Alexa, вы можете реализовать голосовое управление яркостью и цветовой температурой.</p>
                     <ul class="function">
@@ -65,7 +76,7 @@
                         </li>
                         <li>
                             <span class="icon remotecontrol"></span>
-                            <p>Пульт</p>
+                            <p>Пульт (опция)</p>
                         </li>
                     </ul>
                 </div>
@@ -126,7 +137,7 @@
                         </tr>
                         <tr>
                             <td>Управление</td>
-                            <td>голосовое, пульт, приложение</td>
+                            <td>голосовое, пульт (опция), приложение</td>
                         </tr>
                     </tbody>
                 </table>
