--- a/app/includes/shops.html
+++ b/app/includes/shops.html
@@ -86,6 +86,24 @@
                         </div>
                     </div>
                     <div class="col-xs-6 col-sm-4 col-lg-2">
+                        <a class="shop-logo" href="https://texus.by/search/raznoe/?q=yeelight">
+                            <img src="../img/logo-texus(185x80).png" alt="">
+                        </a>
+                        <div class="pin">
+                            <img src="../img/locate-places-on-maps.svg" alt="">
+                            <a href="#" class="show-location" id="texus">на карте</a>
+                        </div>
+                    </div>
+                    <div class="col-xs-6 col-sm-4 col-lg-2">
+                        <a class="shop-logo" href="https://mi.by/catalog/?q=yeelight">
+                            <img src="../img/logo-miby(185x80).png" alt="">
+                        </a>
+                        <div class="pin">
+                            <img src="../img/locate-places-on-maps.svg" alt="">
+                            <a href="#" class="show-location" id="miby">на карте</a>
+                        </div>
+                    </div>
+                    <div class="col-xs-6 col-sm-4 col-lg-2">
                         <a class="shop-logo" href="#">
                             <img src="../img/logo-yeelight(185x80).png" alt="">
                         </a>
