add desktop page Yeelight Curtain

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -353,6 +353,7 @@ header {
 @import "import/_folding.less";
 @import "import/_folding-z1.less";
 @import "import/_clamp.less";
+@import "import/_curtain.less";
 
 .candela {
     margin-top: 80px;
