finish Yeelight Curtain

--- a/app/includes/content_curtain.html
+++ b/app/includes/content_curtain.html
@@ -37,11 +37,11 @@
                         Yeelight, но и с помощью умных голосовых помощников, открывая для себя еще больше возможностей
                         домашней экосистемы.</p>
                     <p>Для того, чтобы почувствовать эффект погружения в атмосферу фильма, достаточно просто сказать
-                        голосовому Ассистенту "Режим кино", все остальное умный дом сделает за Вас - выключится свет и
+                        голосовому Ассистенту "Режим кино", все остальное умный дом сделает за Вас — выключится свет и
                         сами собой закроются шторы.</p>
                     <p>Собираетесь в душ? Сообщите об этом Алисе. В комнате закроются шторы, а в ванной комнате вас
                         будет ждать включенный обогреватель.</p>
-                    <p>Если же вы устали и собираетесь спать - ложитесь! Закрыть шторы и включить свет в режиме ночника
+                    <p>Если же вы устали и собираетесь спать — ложитесь! Закрыть шторы и включить свет в режиме ночника
                         можно голосом.</p>
                 </div>
             </div>
