--- a/app/includes/header.html
+++ b/app/includes/header.html
@@ -98,6 +98,17 @@
                     </li>
                     <li class="menu-item">
                         <div class="menu-item__inner">
+                            <a href="#">Умный&nbsp;дом</a>
+                            <span></span>
+                        </div>
+                        <ul class="sub-menu" style="display: none;">
+                            <li class="sub-menu-item">
+                                <a href="/curtain-motor/">Smart&nbsp;Curtain&nbsp;Motor</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="menu-item">
+                        <div class="menu-item__inner">
                             <a href="/shops/">Где купить</a>
                             <span></span>
                         </div>
@@ -152,7 +163,7 @@
                         </ul>
                     </li>
                     <li class="menu-item">
-                        <a href="">Прикроватные лампы</a>
+                        <a href="">Прикроватные&nbsp;лампы</a>
                         <ul class="sub-menu" style="display:none">
                             <li class="sub-menu-item">
                                 <a href="/candela/">Ambient&nbsp;Candela</a>
@@ -169,7 +180,7 @@
                         </ul>
                     </li>
                     <li class="menu-item">
-                        <a href="">Настольные лампы</a>
+                        <a href="">Настольные&nbsp;лампы</a>
                         <ul class="sub-menu" style="display:none">
                             <li class="sub-menu-item">
                                 <a href="/desk/">LED&nbsp;Smart&nbsp;Desk</a>
@@ -197,8 +208,16 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="menu-item">
+                        <a href="">Умный&nbsp;дом</a>
+                        <ul class="sub-menu" style="display:none">
+                            <li class="sub-menu-item">
+                                <a href="/curtain-motor/">Smart&nbsp;Curtain&nbsp;Motor</a>
+                            </li>
+                        </ul>
+                    </li>
                     <li class="menu-item button-wheretobuy">
-                        <a href="/shops/">Где купить</a>
+                        <a href="/shops/">Где&nbsp;купить</a>
                     </li>
                 </ul>
             </nav>
