--- a/app/includes/products.html
+++ b/app/includes/products.html
@@ -51,6 +51,10 @@
         </a>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
+        <a href="/curtain-motor/" class="product">
+            <img src="img/curtain_thumbnail.jpg" alt="">
+            <p>Yeelight Smart Curtain — умный карниз</p>
+        </a>
         <a href="/wireless-charge-nightlight/" class="product">
             <img src="img/wireless-charge_thumbnail.jpg" alt="">
             <p>Wireless Charge Nightlight — ночник-зарядка</p>
