--- a/app/less/main.less
+++ b/app/less/main.less
@@ -88,8 +88,10 @@ header {
             .menu {
                 position: relative;
                 padding: 0 10px 0 0;
-                line-height: 3.7;
-                text-align: right;
+                line-height: 4;
+                // text-align: right;
+                display: flex;
+                justify-content: flex-end;
 
                 .menu-item {
                     display: inline-block; //border: 1px solid black;
